# plutus-plonk-example

./: .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix  oldflake.nix
aiken-plonk/: aiken.toml
aiken-plonk/lib/aiken-plonk/: types.ak
assets/V2/: alwaysTrueMint.plutus
assets/V3/: alwaysTrueMint.plutus  mainMint.plutus  stateNFTLockScript.plutus  zkMintingScript.plutus
assets/redeemers/: mintRedeemer.json
circom/: example.circuit  example.r1cs  example.r1cs.json  example.sym
circom/example_js/: example.wasm
circom/my-circuit/: example.circom  example.circuit  example.r1cs  example.r1cs.json  example.sym
circom/my-circuit/example_js/: example.wasm
local-testnet/scripts/babbage/: alonzo-babbage-test-genesis.json  conway-babbage-test-genesis.json  mkfiles.sh
nix/: outputs.nix  project.nix  shell.nix
plutus-benchmark/: plutus-benchmark.cabal
plutus-benchmark/common/PlutusBenchmark/: Common.hs  NaturalSort.hs  ProtocolParameters.hs
plutus-benchmark/verifier/: Main.hs  RunVerifier.hs  Scripts.hs
plutus-plonk/: plutus-plonk.cabal
plutus-plonk-bench/: plutus-plonk-bench.cabal
plutus-plonk-bench/common/PlutusBenchmark/: Common.hs  NaturalSort.hs  ProtocolParameters.hs
plutus-plonk-bench/exe/: Main.hs
plutus-plonk-bench/src/PlutusBenchmark/Verifier/: RunVerifier.hs  Scripts.hs  Types.hs
plutus-plonk/src/: Offchain.hs
plutus-plonk/src/Plutus/Crypto/: BlsUtils.hs  Plonk.hs
plutus-plonk/src/Plutus/Crypto/Plonk/: Inputs.hs  Verifier.hs
plutus-plonk/test/: Main.hs  Types.hs
plutus-scripts/: plutus-scripts.cabal
plutus-scripts/exe/: Main.hs  Scripts.hs  Shared.hs  Types.hs
test-vectors/example/: private-input.json  proof.json  public-input.json  public.json  witness.wtns
test-vectors/setup/: example_final.zkey  verification_key.json
