cabal-version: 3.0
name:          plutus-benchmark
version:       0.1.0.0
license:       Apache-2.0
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving
    Strict

  -- See Note [-fno-full-laziness in Plutus Tx]
  ghc-options:
    -fno-specialise -fno-spec-constr -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fno-full-laziness

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies

---------------- Common code for benchmarking ----------------

library plutus-benchmark-common
  import:          lang
  ghc-options:     -Wno-unused-packages
  hs-source-dirs:  common
  exposed-modules:
    PlutusBenchmark.Common
    PlutusBenchmark.NaturalSort
    PlutusBenchmark.ProtocolParameters
    
  other-modules: Paths_plutus_benchmark

  build-depends:
    , base          >=4.9   && <5
    , bytestring
    , criterion
    , directory
    , filepath
    , flat          ^>=0.6
    , plutus-core   
    , plutus-tx     
    , tasty
    , tasty-golden
    , temporary
    , text
    , plutus-plonk

library bench-lib
  import: lang
  ghc-options: -Wno-unused-packages
  hs-source-dirs: src
  exposed-modules: PlutusBenchmark.Verifier.RunVerifier
                   PlutusBenchmark.Verifier.Scripts
                   PlutusBenchmark.Verifier.Types
                  --  PlutusBenchmark.BlsField.RunBlsField
                  --  PlutusBenchmark.BlsField.Scripts
  build-depends:
    , base                     >=4.9     && <5
    , plutus-tx                
    , plutus-core             
    , plutus-tx-plugin
    , plutus-plonk
    , bytestring
    , aeson
    , hedgehog
    , plutus-benchmark-common

executable bench-exe
  import: lang
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends:
    , base                     >=4.9     && <5
    , bench-lib