cabal-version: 3.0
name:          plutus-scripts
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:      "A plutus script that uses plonk"
build-type:    Simple

executable write-scripts
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:
    Scripts
    Shared
    Types

  hs-source-dirs:   exe
  build-depends:
    , aeson
    , base >=4.2 && <5
    , bytestring
    , cardano-api ^>=9.1.0
    , plutus-core ^>=1.31
    , plutus-ledger-api ^>=1.31
    , plutus-plonk
    , plutus-tx ^>=1.31
    , plutus-tx-plugin ^>=1.31
    , polynomial-algebra
    , serialise
